[package]
name = "bus"
version = "0.1.0"
authors = ["fabianbergmark"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.6.0"
lazy_static = "1.4.0"

[target.'cfg(loom)'.dependencies]
loom = { version="0.5.1", features=["checkpoint"] }
